Revert "[PORT FROM MAIN] Split apkcerts-list target creation"
BZ: 72882

Reverting this patch in favor of the google
patch that fixes same issue
This reverts commit a2ba86d30f8048ca6a1035576399f5f727a545b0.

Change-Id: I90228d22cd93bfd3964aeefd145085e840eced6f
Signed-off-by: Olivier Monnier <olivier.monnier@intel.com>
Reviewed-on: http://android.intel.com:8080/79149
Reviewed-by: Alberdi, Ion <ion.alberdi@intel.com>
Reviewed-by: cactus <cactus@intel.com>
Tested-by: cactus <cactus@intel.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -258,23 +258,17 @@ intermediates := \
 APKCERTS_FILE := $(intermediates)/$(name).txt
 # We don't need to really build all the modules.
 # TODO: rebuild APKCERTS_FILE if any app change its cert.
-
-# $(1): package list
-define build-apkcerts-list
-$(hide) $(foreach p,$(1),\
-    $(if $(PACKAGES.$(p).EXTERNAL_KEY),\
-        echo 'name="$(p).apk" certificate="EXTERNAL" \
-             private_key=""' >> $@;,\
-        echo 'name="$(p).apk" certificate="$(PACKAGES.$(p).CERTIFICATE)" \
-             private_key="$(PACKAGES.$(p).PRIVATE_KEY)"' >> $@;))
-endef
-
 $(APKCERTS_FILE):
 	@echo APK certs list: $@
 	@mkdir -p $(dir $@)
 	@rm -f $@
-	$(hide) $(call split-long-arguments,build-apkcerts-list,$(PACKAGES),function)
-	# In case $$(PACKAGES) is empty.
+	$(hide) $(foreach p,$(PACKAGES),\
+          $(if $(PACKAGES.$(p).EXTERNAL_KEY),\
+	    echo 'name="$(p).apk" certificate="EXTERNAL" \
+	         private_key=""' >> $@;,\
+	    echo 'name="$(p).apk" certificate="$(PACKAGES.$(p).CERTIFICATE)" \
+	         private_key="$(PACKAGES.$(p).PRIVATE_KEY)"' >> $@;))
+	# In case $(PACKAGES) is empty.
 	$(hide) touch $@
 
 .PHONY: apkcerts-list
